--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,8 +1,3 @@
-<% 
-const d=new Date()
-let year=d.getFullYear() 
-%>
-<footer>
-    <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
-    <a href="/ierror">CAUSE AN ERROR</a>
-</footer>
+<nav>
+    <%- nav %>
+</nav>
