--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,55 +1,46 @@
-<h1>Welcome to CSE Motors</h1>
 <%- messages() %>
-<section class="hero">
-    <img src="/images/vehicles/delorean.jpg" alt="car">
-    <div class="hero-text">
-        <h3>DMC Delorean</h3>
-        <ul>
-            <li>3 Cup holders</li>
-            <li>Superman doors</li>
-            <li>Fuzzy dice!</li>
-        </ul>
-        <input type="button" class="button-blue" value="Own Today">
+<h1>Welcome to CSE Motors!</h1>
+<div class="image-container">
+    <div class="car-offer">
+        <strong>DMC Delorean</strong>
+        <p>3 Cup Holders</p>
+        <p>Superman doors</p>
+        <p>Fuzzy dice!</p>
+        <p class="center"><img src="images/site/own_today.png" width="150" alt="Own it Today"></p>
     </div>
-</section>
-<div class="content">
-    <section id="reviews">
+    <!-- <img src="images/vehicles/delorean.jpg" alt="DMC Delorean"> -->
+</div>
+
+<div class="car-details">
+    <div>
+        <h2>Delorean Upgrades</h2>
+        <div class="car-upgrades">
+            <div>
+                <img src="images/upgrades/flux-cap.png" alt="Flux Capacitor">
+                <a href="#">Flux Capacitor</a>
+            </div>
+            <div>
+                <img src="images/upgrades/flame.jpg" alt="Flame Decals">
+                <a href="#">Flame Decals</a>
+            </div>
+            <div>
+                <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
+                <a href="#">Bumper Stickers</a>
+            </div>
+            <div>
+                <img src="images/upgrades/hub-cap.jpg" alt="Hub Caps">
+                <a href="#">Hub Caps</a>
+            </div>
+        </div>
+    </div>
+    <div>
         <h2>DMC Delorean Reviews</h2>
-        <ul class="open">
+        <ul class="car-reviews">
             <li>"So fast it's almost like traveling in time." (4/5)</li>
             <li>"Coolest ride on the road." (4/5)</li>
             <li>"I'm feeling McFly!" (5/5)</li>
             <li>"The most futuristic ride of our day." (4.5/5)</li>
-            <li>"80's livin and I love it." (5/5)</li>
+            <li>"80's living and I love it!" (5/5)</li>
         </ul>
-    </section>
-    <section id="upgrades">
-        <h2>Delorean Upgrades</h2>
-        <div class="gallery">
-            <div class="caption-image">
-                <div>
-                    <img src="/images/upgrades/flux-cap.png" alt="Flux capacitor">
-                </div>
-                <p><a href="#">Flux Capacitor</a></p>
-            </div>
-            <div class="caption-image">
-                <div>
-                    <img src="/images/upgrades/flame.jpg" alt="Flame decal">
-                </div>
-                <p><a href="#">Flame Decals</a></p>
-            </div>
-            <div class="caption-image">
-                <div>
-                    <img src="/images/upgrades/bumper_sticker.jpg" alt="Hello world bumper sticker">
-                </div>
-                <p><a href="#">Bumper Stickers</a></p>
-            </div>
-            <div class="caption-image">
-                <div>
-                    <img src="/images/upgrades/hub-cap.jpg" alt="Hub cap">
-                </div>
-                <p><a href="#">Hub Caps</a></p>
-            </div>
-        </div>
-    </section>
+    </div>
 </div>
