--- a/views/review/edit-review.ejs
+++ b/views/review/edit-review.ejs
@@ -1,4 +1,4 @@
-<div class="form-body">
+pnpm add ejs express-ejs-layouts<div class="form-body">
     <div class="form-container">
         <% if (title) { %>
             <h1><%= title %></h1>
